# ELF

./: ._train_minirts_unitcmd.sh  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  PATENTS  README.md  agz_selfplay.sh  agz_train.sh  allmake.sh  check.py  console_df.sh  console_df_check_train.sh  console_df_mcts.sh  df_console.py  df_selfplay.py  df_selfplay.sh  eval.py  eval_atari.sh  eval_checkforward.py  eval_lstm.py  eval_minirts.sh  eval_minirts2.sh  eval_reduced_mcts.py  eval_selfplay_aivsai.py  ex_elfpy.py  run.py  selfplay.py  selfplay_aivsai.sh  selfplay_minirts.sh  test_lua.cc  test_lua.lua  train.py  train_atari.sh  train_df.sh  train_lstm.py  train_minirts.sh  train_minirts_unitcmd.sh
atari/: CMakeLists.txt  Makefile  README.md  atari_game.cc  atari_game.h  atari_game_specific.h  benchmark-ale.cpp  benchmark-atari.cpp  benchmark-atari.py  benchmark-gym.py  game.py  game_context.h  model.py  python_wrapper.cc  timer.hh
docs/: Makefile
docs/source/: RTS-engine.rst  conf.py  index.rst  methods.rst  rlpytorch.rst  runner.rst  sampler.rst  stats.rst  trainer.rst  utils.rst  wrapper-python.rst  wrapper.rst
elf/: CMakeLists.txt  __init__.py  ai.h  ai_comm.h  circular_queue.h  collector.hh  comm_template.h  common.h  common_utils.py  compile_test_mcts.sh  context_utils.py  copier.hh  ctpl_stl.h  data_addr.h  fields_common.h  game_base.h  hist.h  mcts.h  mcts_ai.h  member_check.h  more_labels.py  primitive.h  pybind_helper.h  pybind_interface.h  python_options_utils_cpp.h  replay_loader.cc  replay_loader.h  shared_buffer.hh  shared_replay_buffer.h  shared_rw_buffer.cc  shared_rw_buffer.h  shared_rw_buffer2.h  signal.h  state_collector.h  stats.h  tar_loader.cc  tar_loader.h  test_tree_search.cc  tree_search.h  tree_search_alg.h  (+6 more)
elf-python/: GCWrapper.py  memory_receiver.py  simulator.py
elf/lib/: debugutils.cc  debugutils.hh  strutils.cc  strutils.hh
elf/lua/: common.h  interface.h  state_holder.h
elf_python/: GCWrapper.py  README.md  __init__.py  assembler.py  circular_queue.py  memory_receiver.py  offline_assembler.py  replier.py  simulator.py  utils.py  zmq_adapter.py
go/: CMakeLists.txt  Makefile  README.md  ai.h  board.cc  board.h  board_feature.cc  board_feature.h  cmake_install.cmake  common.cc  common.h  console.py  default_policy.cc  default_policy.h  df_gen.py  df_model.py  df_model2.py  df_model3.py  game.cc  game.h  game.py  game_context.h  game_selfplay.cc  game_selfplay.h  gen_prediction.py  go_ai.h  go_game_specific.h  go_loader.cc  go_loader.h  go_state.cc  go_state.h  mcts.h  mcts_prediction.py  multiple_prediction.py  offpolicy_loader.cc  offpolicy_loader.h  online_mcts_player.cc  online_mcts_player.h  online_player.cc  online_player.h  (+9 more)
go/elf/: Makefile  cmake_install.cmake
rlpytorch/: README.md  __init__.py  actor_critic.py  args_provider.py  args_utils.py  batch_evaluate.py  discounted_reward.py  model_base.py  model_interface.py  model_loader.py  parameter_server.py  policy_gradient.py  rlmethod_base.py  rlmethod_common.py  rlmethod_utils.py  rlsampler.py  run.py  sampler.py  size_utils.py  stats.py  trainer.py  utils.py  value_match.py
rlpytorch/methods/: __init__.py  actor_critic.py  discounted_reward.py  policy_gradient.py  ppo.py  q_learning.py  rnn_actor_critic.py  utils.py  value_matcher.py
rlpytorch/runner/: __init__.py  eval_iters.py  multi_process.py  parameter_server.py  single_process.py
rlpytorch/sampler/: __init__.py  sample_methods.py  sampler.py
rlpytorch/stats/: __init__.py  stats.py
rlpytorch/trainer/: __init__.py  lstm_trainer.py  td_trainer.py  timer.py  trainer.py  utils.py
rlpytorch/utils/: __init__.py  hist_states.py  size_utils.py  utils.py
rts/: CMakeLists.txt  README.md
rts/backend/: CMakeLists.txt  Makefile  README.md  comm_ai.cc  comm_ai.h  main_loop.cc  raw2cmd.cc  raw2cmd.h  save2json.cc  save2json.h  ws_server.h
rts/engine/: CMakeLists.txt  README.md  __init__.py  ai.cc  ai.h  aux_func.cc  aux_func.h  bullet.cc  bullet.h  cmd.cc  cmd.def  cmd.gen.h  cmd.h  cmd_interface.h  cmd_receiver.cc  cmd_receiver.h  cmd_specific.cc  cmd_specific.def  cmd_specific.gen.h  cmd_util.cc  cmd_util.h  common.h  common_loader.py  compile_cmds.py  custom_enum.h  fields.cc  fields.h  game.cc  game.h  game_action.h  game_env.cc  game_env.h  game_options.h  game_state.cc  game_state.h  game_stats.h  gamedef.cc  gamedef.h  locality_search.h  lua_ai.h  (+25 more)
rts/engine/.ropeproject/: globalnames  objectdb
rts/engine/lua/: cpp_interface.cc  cpp_interface.h  lua_interface.cc  lua_interface.h  utils.cc  utils.h
rts/frontend/: ._minirts.html  game.js  minirts.html
rts/game_CF/: CMakeLists.txt  Makefile  ai.cc  ai.h  cf_rule_actor.cc  cf_rule_actor.h  cmd_specific.cc  cmd_specific.def  game.py  gamedef.cc  model.py  player_selector.h  python_options.h  python_wrapper.cc  wrapper_callback.cc  wrapper_callback.h
rts/game_MC/: CMakeLists.txt  Makefile  actor_critic_changed.py  ai.cc  ai.h  cmd_specific.cc  cmd_specific.def  cmd_specific.gen.h  collect_rep_stats.py  forward_predict.py  game.py  game_action.cc  game_action.h  gamedef.cc  lua_ai.cc  lua_ai.h  mc_rule_actor.cc  mc_rule_actor.h  mcts.h  mixed_ai.h  model.py  model_lstm.py  model_unit_cmd.py  player_selector.h  python_options.h  python_wrapper.cc  reduced_ai.cc  reduced_ai.h  rule_ai.h  state_extract.cc  state_feature.cc  state_feature.h  td_sampler.py  trainable_ai.cc  trainable_ai.h  trunk.py  try_reduced_space.sh  wrapper_callback.cc  wrapper_callback.h
rts/game_MC/lua/: attack_rule_book.lua  cpp_interface.cc  cpp_interface.h  lua_interface.cc  lua_interface.h  m1.map  map_generator.lua  map_parser.lua  two_rivers.map  unit_factory.lua  unit_generator.lua
rts/game_TD/: CMakeLists.txt  Makefile  ai.cc  ai.h  cmd_specific.cc  cmd_specific.def  game.py  gamedef.cc  model.py  player_selector.h  python_options.h  python_wrapper.cc  td_rule_actor.cc  td_rule_actor.h  wrapper_callback.cc  wrapper_callback.h
scripts/: devmode_set_pythonpath.sh
src_cpp/elf/ai/: ai.h
src_cpp/elf/base/: context.h
src_py/elf/: utils_elf.py
(+16 files in other folders)
